fix: delete z-index

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -16,7 +16,7 @@
     top: 167px;
     right: 0;
     width: 60%;
-    z-index: 2;
+    // z-index: 2;
 
     &::after {
       content: "";
